--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -1,7 +1,7 @@
 /* Skills.css */
 .skills-container {
   text-align: center;
-  padding: 5rem 0;
+  padding: 5rem 0 2rem 0;
 }
 
 .skills-title {
@@ -39,4 +39,3 @@
   transition: transform 0.3s ease;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
-
